project 03 discussion 07 updated

--- a/discussions/07/Discussion 07.ipynb
+++ b/discussions/07/Discussion 07.ipynb
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 83,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os\n"
+    "import os\n",
+    "import requests\n",
+    "import bs4"
    ]
   },
   {
@@ -92,13 +92,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "url_list= ..."
+    "url_list = []\n",
+    "for num in range(0, 26):\n",
+    "    url_list.append('http://example.webscraping.com/places/default/index/' + str(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['http://example.webscraping.com/places/default/index/0',\n",
+       " 'http://example.webscraping.com/places/default/index/1',\n",
+       " 'http://example.webscraping.com/places/default/index/2',\n",
+       " 'http://example.webscraping.com/places/default/index/3',\n",
+       " 'http://example.webscraping.com/places/default/index/4',\n",
+       " 'http://example.webscraping.com/places/default/index/5',\n",
+       " 'http://example.webscraping.com/places/default/index/6',\n",
+       " 'http://example.webscraping.com/places/default/index/7',\n",
+       " 'http://example.webscraping.com/places/default/index/8',\n",
+       " 'http://example.webscraping.com/places/default/index/9',\n",
+       " 'http://example.webscraping.com/places/default/index/10',\n",
+       " 'http://example.webscraping.com/places/default/index/11',\n",
+       " 'http://example.webscraping.com/places/default/index/12',\n",
+       " 'http://example.webscraping.com/places/default/index/13',\n",
+       " 'http://example.webscraping.com/places/default/index/14',\n",
+       " 'http://example.webscraping.com/places/default/index/15',\n",
+       " 'http://example.webscraping.com/places/default/index/16',\n",
+       " 'http://example.webscraping.com/places/default/index/17',\n",
+       " 'http://example.webscraping.com/places/default/index/18',\n",
+       " 'http://example.webscraping.com/places/default/index/19',\n",
+       " 'http://example.webscraping.com/places/default/index/20',\n",
+       " 'http://example.webscraping.com/places/default/index/21',\n",
+       " 'http://example.webscraping.com/places/default/index/22',\n",
+       " 'http://example.webscraping.com/places/default/index/23',\n",
+       " 'http://example.webscraping.com/places/default/index/24',\n",
+       " 'http://example.webscraping.com/places/default/index/25']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url_list"
    ]
   },
   {
@@ -110,12 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 105,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# for url in url_list:\n",
+    "    # txt = requests.get(url).text\n",
+    "    # print(url)"
+   ]
   },
   {
    "cell_type": "code",
@@ -150,25 +197,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 74,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def request_until_successful(url, N):\n",
-    "    ...\n",
-    "    return ..."
+    "    if N==0:\n",
+    "        return None\n",
+    "    \n",
+    "    rq = requests.get(url)\n",
+    "    \n",
+    "    if rq.status_code != 200 and N>0:\n",
+    "        return request_until_successful(url, N-1)\n",
+    "    \n",
+    "    return rq\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp = request_until_successful('http://example.webscraping.com/', N=1)\n",
+    "resp"
+   ]
   },
   {
    "cell_type": "code",
@@ -188,23 +252,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 120,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_responses(url_list):\n",
-    "    \n",
-    "    return ..."
+    "    rqs = []\n",
+    "    for url in url_list:\n",
+    "        rqs.append(request_until_successful(url, 5))\n",
+    "    return rqs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -219,81 +281,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 121,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def parse_page(resp):\n",
-    "    \n",
-    "    return ...\n"
+    "    soup = bs4.BeautifulSoup(resp.text, 'lxml')\n",
+    "    temp = soup.find_all('table')[0].find_all('a')# .text\n",
+    "    results = []\n",
+    "    for th in temp:\n",
+    "        results.append(th.text.strip())\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-122-e5f095768cf7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtxt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequest_until_successful\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'http://example.webscraping.com/places/default/index/0'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'text'"
+     ]
+    }
+   ],
+   "source": [
+    "txt = request_until_successful('http://example.webscraping.com/places/default/index/0', N=1).text"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = bs4.BeautifulSoup(txt, 'lxml')\n",
+    "temp = soup.find_all('table')[0].find_all('a')# .text\n",
+    "for th in temp:\n",
+    "    print(th.text.strip())\n",
+    "# temp.find_all('a')[0].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 123,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def parse_pages(resps):\n",
-    "    \n",
-    "    return ..."
+    "    results = []\n",
+    "    for resp in resps:\n",
+    "        results.append(parse_page(resp))\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -306,43 +378,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 124,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_countries():\n",
-    "    \n",
-    "    return ..."
+    "    resps = get_responses(url_list)\n",
+    "    unflatten = parse_pages(resps)\n",
+    "    # print(unflatten)\n",
+    "    results = [item for sublist in unflatten for item in sublist]\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-125-07dfbc2eb35e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_countries\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-124-43d94a5ebe5e>\u001b[0m in \u001b[0;36mget_countries\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mget_countries\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mresps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_responses\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0munflatten\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparse_pages\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;31m# print(unflatten)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mitem\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0msublist\u001b[0m \u001b[1;32min\u001b[0m \u001b[0munflatten\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msublist\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-123-898ca25a57a2>\u001b[0m in \u001b[0;36mparse_pages\u001b[1;34m(resps)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mresp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mresps\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparse_page\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mresults\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-121-6e33e1a5efe9>\u001b[0m in \u001b[0;36mparse_page\u001b[1;34m(resp)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mparse_page\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0msoup\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbs4\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'lxml'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mtemp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'table'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;31m# .text\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mth\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtemp\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'text'"
+     ]
+    }
+   ],
+   "source": [
+    "results = get_countries()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(results)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "results"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -389,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
