--- a/lectures/14/Lecture 14 Features.ipynb
+++ b/lectures/14/Lecture 14 Features.ipynb
@@ -643,11 +643,7 @@
    "source": [
     "# typical pattern; focus on this later!\n",
     "\n",
-    "lr = LinearRegression() # initial linear regression\n",
-    "\n",
-    "lr.fit(galton[['mother', 'father']], galton.childHeight) # calculate the weights\n",
-    "\n",
-    "predictions = lr.predict(galton[['mother', 'father']]) # calculate predictions"
+    " Renam,e"
    ]
   },
   {
@@ -1800,7 +1796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   },
   "livereveal": {
    "scroll": true,
