--- a/lectures/05/Lecture 05 Data Granularity.ipynb
+++ b/lectures/05/Lecture 05 Data Granularity.ipynb
@@ -832,7 +832,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x00000263DA166CC0>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001E32B6A1588>"
       ]
      },
      "execution_count": 10,
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1587,23 +1587,21 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Name</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Number</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Name</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Number</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Gender</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>amin</th>\n",
-       "      <th>amax</th>\n",
-       "      <th>size</th>\n",
-       "      <th>amin</th>\n",
-       "      <th>amax</th>\n",
-       "      <th>size</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Color</th>\n",
-       "      <th>Gender</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1614,79 +1612,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">blue</th>\n",
-       "      <th>F</th>\n",
-       "      <td>Nhi</td>\n",
+       "      <th>blue</th>\n",
+       "      <td>Joey</td>\n",
        "      <td>Weiwei</td>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>50</td>\n",
-       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>M</th>\n",
+       "      <th>green</th>\n",
        "      <td>Joey</td>\n",
-       "      <td>Joey</td>\n",
-       "      <td>1</td>\n",
-       "      <td>42</td>\n",
-       "      <td>42</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">green</th>\n",
-       "      <th>F</th>\n",
        "      <td>Karina</td>\n",
-       "      <td>Karina</td>\n",
-       "      <td>1</td>\n",
        "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>Joey</td>\n",
-       "      <td>Joey</td>\n",
-       "      <td>1</td>\n",
        "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">pink</th>\n",
-       "      <th>M</th>\n",
+       "      <th>pink</th>\n",
        "      <td>Fernando</td>\n",
-       "      <td>Fernando</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-9</td>\n",
-       "      <td>-9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>X</th>\n",
        "      <td>Sam</td>\n",
-       "      <td>Sam</td>\n",
-       "      <td>1</td>\n",
        "      <td>-42</td>\n",
-       "      <td>-42</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-9</td>\n",
+       "      <td>M</td>\n",
+       "      <td>X</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Name                Number          \n",
-       "                  amin      amax size   amin amax size\n",
-       "Color Gender                                          \n",
-       "blue  F            Nhi    Weiwei    2      3   50    2\n",
-       "      M           Joey      Joey    1     42   42    1\n",
-       "green F         Karina    Karina    1      7    7    1\n",
-       "      M           Joey      Joey    1      8    8    1\n",
-       "pink  M       Fernando  Fernando    1     -9   -9    1\n",
-       "      X            Sam       Sam    1    -42  -42    1"
+       "           Name         Number     Gender    \n",
+       "            min     max    min max    min max\n",
+       "Color                                        \n",
+       "blue       Joey  Weiwei      3  50      F   M\n",
+       "green      Joey  Karina      7   8      F   M\n",
+       "pink   Fernando     Sam    -42  -9      M   X"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,10 +1671,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Color</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Weiwei</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>50</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Karina</td>\n",
+       "      <td>green</td>\n",
+       "      <td>7</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Fernando</td>\n",
+       "      <td>pink</td>\n",
+       "      <td>-9</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Nhi</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>3</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Sam</td>\n",
+       "      <td>pink</td>\n",
+       "      <td>-42</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Name  Color  Number Gender\n",
+       "1    Weiwei   blue      50      F\n",
+       "3    Karina  green       7      F\n",
+       "4  Fernando   pink      -9      M\n",
+       "5       Nhi   blue       3      F\n",
+       "6       Sam   pink     -42      X"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "people[((people.Number > 0) & (people.Gender != 'M')) | ((people.Number < 0) & (people.Gender != 'F'))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TimedeltaIndex(['00:00:00', '01:00:00', '02:00:00', '03:00:00', '04:00:00'], dtype='timedelta64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.to_timedelta(np.arange(5), unit='h')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3862,7 +3930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   },
   "livereveal": {
    "scroll": true,
